test/libsolidity/syntaxTests/nameAndTypeResolution/524_accept_library_creation.sol
library L {}
contract C {
    function f() public {
        new L();
    }
}
// ----
// TypeError 8696: (60-65): Cannot instantiate a library.
